@@ -10,6 +10,7 @@ import com.alioth.server.domain.dummy.domain.ContractMembers;
 import com.alioth.server.domain.dummy.domain.Custom;
 import com.alioth.server.domain.dummy.domain.InsuranceProduct;
 import com.alioth.server.domain.dummy.service.DummyService;
+import com.alioth.server.domain.excel.dto.ExcelReqDto;
 import com.alioth.server.domain.member.domain.SalesMembers;
 import com.alioth.server.domain.member.service.SalesMemberService;
 import jakarta.persistence.EntityNotFoundException;
@@ -21,6 +22,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -83,16 +85,61 @@ public class ContractService {
         contractRepository.deleteById(contractId);
     }
 
+
+
     public List<ContractResDto> listAllContracts() {
         return contractRepository.findAll().stream()
-                .map(typeChange::ContractToContractResDto)
-                .collect(Collectors.toList());
+                    .map(typeChange::ContractToContractResDto)
+                    .collect(Collectors.toList());
     }
-    public List<ContractResDto> contractsByMember(Long memberId) {
-        SalesMembers sm = salesMemberService.findById(memberId);
-        return contractRepository.findAllBySalesMembersId(sm.getId()).stream()
-                .map(typeChange::ContractToContractResDto)
-                .collect(Collectors.toList());
+
+    public List<ContractResDto> findAllContractsByPeriod(ExcelReqDto dto) {
+        if(dto.startDate() == null && dto.endDate() == null){
+            return this.listAllContracts();
+        } else {
+            return contractRepository.findAllByPeriod(dto.startDate(), dto.endDate()).stream()
+                    .map(typeChange::ContractToContractResDto).toList();
+        }
+    }
+
+    public List<ContractResDto> allContractsByMemberAndPeriod(Long memberId, ExcelReqDto dto){
+        List<ContractResDto> contractResDtoList = new ArrayList<>();
+        List<Contract> allContracts;
+        if(dto.startDate() == null && dto.endDate() == null){
+            allContracts = contractRepository.findAllBySalesMembersId(memberId);
+            for (Contract c: allContracts){
+                contractResDtoList.add(typeChange.ContractToContractResDto(c));
+            }
+        } else {
+            allContracts = contractRepository.findAllByPeriodAndSalesMembersId(memberId, dto.startDate(), dto.endDate());
+            for (Contract c: allContracts){
+                contractResDtoList.add(typeChange.ContractToContractResDto(c));
+            }
+        }
+        return contractResDtoList;
+    }
+
+
+    public List<Custom> customListByMemberId(Long memberId, ExcelReqDto dto) {
+        if(dto.startDate() == null && dto.endDate() == null){
+          return contractRepository.findAllBySalesMembersId(memberId).stream().map(Contract::getCustom).toList();
+        } else {
+            return contractRepository.findAllByPeriodAndSalesMembersId(memberId,dto.startDate(),dto.endDate())
+                    .stream().map(Contract::getCustom).toList();
+        }
+    }
+
+    public List<Custom> customTotalList(ExcelReqDto dto) {
+        if(dto.startDate() == null && dto.endDate() == null){
+            return contractRepository.findAll().stream().map(Contract::getCustom).toList();
+        } else {
+            return contractRepository.findAllByPeriod(dto.startDate(),dto.endDate()).stream()
+                    .map(Contract::getCustom).toList();
+        }
+    }
+    public String createContractCode(){
+        String date = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+        return date + UUID.randomUUID();
     }
 
     public List<Custom> customListByMemberId(Long memberId) {
